--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-lottie-player": "^1.5.5",
+    "@lottiefiles/react-lottie-player": "^1.5.5",
     "lucide-react": "^0.303.0"
   },
   "devDependencies": {
